# atomsciflow

./: .gitignore  CMakeLists.txt  NOTICE  README.md  build_wheels.sh  makefile.linux  pyproject.toml  setup.py
.github/workflows/: build-wheels-linux.yml  build-wheels-macos.yml  build-wheels-windows.yml
atomsciflow/: __init__.py
atomsciflow/abinit/: __init__.py  abinit.py  io.py  post.py
atomsciflow/cmd/: __init__.py  atomsciflow.py  atomsciflow_calc.py  atomsciflow_calc_abinit.py  atomsciflow_calc_cp2k.py  atomsciflow_calc_dalton.py  atomsciflow_calc_dftbplus.py  atomsciflow_calc_elk.py  atomsciflow_calc_exciting.py  atomsciflow_calc_gamessus.py  atomsciflow_calc_gaussian.py  atomsciflow_calc_gromacs.py  atomsciflow_calc_lammps.py  atomsciflow_calc_nwchem.py  atomsciflow_calc_octopus.py  atomsciflow_calc_orca.py  atomsciflow_calc_qchem.py  atomsciflow_calc_qe.py  atomsciflow_calc_qmcpack.py  atomsciflow_calc_siesta.py  atomsciflow_calc_vasp.py  atomsciflow_calc_xtb.py  atomsciflow_post.py  atomsciflow_post_abinit.py  atomsciflow_post_cp2k.py  atomsciflow_post_elk.py  atomsciflow_post_gamessus.py  atomsciflow_post_nwchem.py  atomsciflow_post_octopus.py  atomsciflow_post_qe.py  atomsciflow_post_siesta.py  atomsciflow_post_vasp.py  atomsciflow_stru.py  calc_tools.py  cmd_utils.py
atomsciflow/config/: __init__.py
atomsciflow/cp2k/: __init__.py  cp2k.py  io.py  post.py
atomsciflow/dalton/: __init__.py  dalton.py
atomsciflow/dftbplus/: __init__.py  dftbplus.py
atomsciflow/elk/: __init__.py  elk.py  io.py  post.py
atomsciflow/exciting/: __init__.py  exciting.py
atomsciflow/gamessus/: __init__.py  gamessus.py  io.py  post.py
atomsciflow/gaussian/: __init__.py  gaussian.py
atomsciflow/gromacs/: __init__.py  gromacs.py
atomsciflow/lammps/: __init__.py  lammps.py
atomsciflow/nwchem/: __init__.py  io.py  nwchem.py  post.py
atomsciflow/octopus/: __init__.py  io.py  octopus.py  post.py
atomsciflow/orca/: __init__.py  orca.py
atomsciflow/plumed/: plumed.py
atomsciflow/post/: __init__.py  post.py
atomsciflow/qchem/: __init__.py  qchem.py
atomsciflow/qe/: __init__.py  io.py  post.py  pwscf.py
atomsciflow/qmcpack/: __init__.py  qmcpack.py
atomsciflow/siesta/: __init__.py  io.py  post.py  siesta.py
atomsciflow/vasp/: __init__.py  io.py  post.py  vasp.py
atomsciflow/xtb/: __init__.py  xtb.py
build_wheels/: build_wheels_centos7.sh  build_wheels_debian.sh
cmake/: atomsciflow-config.cmake.in
cmd/: CMakeLists.txt  asflow_calc.cpp  atomsciflow.cpp  atomsciflow_calc.cpp  atomsciflow_calc_abinit.cpp  atomsciflow_calc_abinit.h  atomsciflow_calc_cp2k.cpp  atomsciflow_calc_cp2k.h  atomsciflow_calc_elk.cpp  atomsciflow_calc_elk.h  atomsciflow_calc_gamessus.cpp  atomsciflow_calc_gamessus.h  atomsciflow_calc_qe.cpp  atomsciflow_calc_qe.h  atomsciflow_calc_qmcpack.cpp  atomsciflow_calc_qmcpack.h  atomsciflow_calc_vasp.cpp  atomsciflow_calc_vasp.h  atomsciflow_cube.cpp  atomsciflow_post.cpp  atomsciflow_post_vasp.cpp  atomsciflow_post_vasp.h  atomsciflow_ssh.cpp  atomsciflow_traj.cpp  atomsciflow_version.cpp  atomsciflow_yaml.cpp  cmd_utils.cpp  cmd_utils.h  makefile.linux
fortran/atomsciflowf/: CMakeLists.txt
fortran/atomsciflowf/c_binding/: c_f_string_c_binding.f90  cmd_utils_c_bindnig.f90  cube_1d_c_binding.f90  cube_diff_1d_c_binding.f90  cube_to_vtk_c_binding.f90
fortran/atomsciflowf/cmd/: cube_1d_program.f90  cube_diff_1d_program.f90  cube_to_vtk_program.f90
fortran/atomsciflowf/src/: cmd_utils.f90  crystal.f90  cube_1d.f90  cube_diff_1d.f90  cube_to_vtk.f90
fortran/pyx/: cmd_utils.pyx
pybind11/: CMakeLists.txt  utils.cpp
pybind11/abinit/: abinit.cpp
pybind11/base/: base.cpp
pybind11/cmd/: cmd.cpp
pybind11/config/: config.cpp
pybind11/cp2k/: cp2k.cpp
pybind11/dalton/: dalton.cpp
pybind11/dftbplus/: dftbplus.cpp
pybind11/elk/: elk.cpp
pybind11/exciting/: exciting.cpp
pybind11/gamessus/: gamessus.cpp
pybind11/gaussian/: gaussian.cpp
pybind11/gromacs/: gromacs.cpp
pybind11/lammps/: lammps.cpp
pybind11/nwchem/: nwchem.cpp
pybind11/octopus/: octopus.cpp
pybind11/orca/: orca.cpp
pybind11/parser/: parser.cpp
pybind11/plumed/: plumed.cpp
pybind11/post/: post.cpp
pybind11/qchem/: qchem.cpp
pybind11/qe/: qe.cpp
pybind11/qmcpack/: qmcpack.cpp
pybind11/server/: server.cpp
pybind11/siesta/: siesta.cpp
pybind11/variable/: variable.cpp
pybind11/vasp/: vasp.cpp
pybind11/xtb/: xtb.cpp
src/atomsciflow/: utils.cpp  utils.h
src/atomsciflow/abinit/: abinit.cpp  abinit.h  abinit_dfpt.cpp  abinit_dfpt.h  abinit_electrons.cpp  abinit_electrons.h  abinit_files.cpp  abinit_files.h  abinit_input.cpp  abinit_input.h  abinit_ions.cpp  abinit_ions.h  abinit_misc.cpp  abinit_misc.h  abinit_system.cpp  abinit_system.h  electrons.cpp  electrons.h  phonopy.cpp  phonopy.h  system.h  utils.cpp  utils.h
src/atomsciflow/base/: atom.h  atomic_radius.h  crystal.cpp  crystal.h  element.cpp  element.h  kpath.cpp  kpath.h  xyz.cpp  xyz.h
src/atomsciflow/cmd/: cmd_utils.cpp  cmd_utils.h
src/atomsciflow/config/: config_manager.cpp  config_manager.h
src/atomsciflow/cp2k/: cp2k.cpp  cp2k.h  neb.cpp  neb.h  opt.cpp  opt.h  phonopy.cpp  phonopy.h  section.cpp  section.h  section_v1.cpp  static.cpp  static.h  utils.h
src/atomsciflow/cube_handle/: cube_diff.cpp  cube_handle.h
src/atomsciflow/dalton/: dalton.cpp  dalton.h  input_module.cpp  input_module.h
src/atomsciflow/dftbplus/: dftbplus.cpp  dftbplus.h
src/atomsciflow/elk/: block.cpp  block.h  elk.cpp  elk.h  opt.cpp  opt.h  static.cpp  static.h  utils.cpp  utils.h
src/atomsciflow/exciting/: exciting.cpp  exciting.h
src/atomsciflow/gamessus/: gamessus.cpp  gamessus.h  opt.cpp  opt.h  static.cpp  static.h  utils.cpp  utils.h
src/atomsciflow/gaussian/: gaussian.cpp  gaussian.h
src/atomsciflow/gromacs/: gromacs.cpp  gromacs.h
src/atomsciflow/lammps/: lammps.cpp  lammps.h
src/atomsciflow/qe/: card.h  (+15 more)
test/gtest/: CMakeLists.txt  main.cpp
test/gtest/config/: config.cpp
test/gtest/cp2k/: cp2k.cpp
test/gtest/qmcpack/: qmcpack.cpp
test/gtest/utils/: utils.cpp
(+168 files in other folders)
